# flow-protocol

./: .gitignore  CMakeLists.txt  README.md  build-cuda-native.bat  build-gpu-manual.bat  build-gpu-manual.ps1  build-gpu.bat  build_clean.bat  build_gpu.bat  build_linux.sh  build_manual.bat  build_miner.bat  build_node.bat  build_node_linux.sh  build_win.bat  ftc-node-linux  gen_opencl_header.py  nodes.txt  peers.txt  rebuild-c-only.bat  rebuild-gpu-c.ps1
docs/: NODE_SETUP.md
include/: ftc.h
node/: full_node.c  full_node.h  gpu_miner_main.c  main.c  miner_node.c  miner_node.h
pool-server/: config.js  deploy-aws.bat  deploy-aws.sh  package.json  server.js
release/: README.txt  ftc-genaddr-linux  ftc-miner-gpu-linux  ftc-node-linux
src/core/: block.c  block.h  consensus.c  consensus.h  mempool.c  mempool.h  tx.c  tx.h  utxo.c  utxo.h
src/crypto/: ed25519.c  ed25519.h  keccak256.c  keccak256.h  keys.c  keys.h  merkle.c  merkle.h
src/miner/: gpu_miner.c  gpu_miner.h  keccak256.cl  keccak256_cl_embedded.h  keccak256_cuda.cu  keccak256_opencl.c  miner.c  miner.h
src/network/: p2p.c  p2p.h  protocol.c  protocol.h
src/p2p/: p2p.c  p2p.h
src/p2pool/: p2pool.c  p2pool.h
src/rpc/: rpc.c  rpc.h
src/stratum/: stratum.c  stratum.h
src/wallet/: wallet.c  wallet.h
tests/: test_block.c  test_crypto.c  test_tx.c
tools/: genaddr.c  genesis_miner.c  wallet_cli.c
